--- a/butterfly/sass/_layout.sass
+++ b/butterfly/sass/_layout.sass
@@ -32,11 +32,11 @@ body[data-native-scroll="yes"]
 
   ::-webkit-scrollbar
     background: $bg
-    width: .5em
-    height: .5em
+    width: .75em
+    height: .75em
 
   ::-webkit-scrollbar-thumb
-    background: $fg
+    background: rgba($fg, .1)
 
 .terminal
   outline: none
